--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="postgresql://admin:admin@localhost:5432"
-DATABASE_URL="postgres://zhrtmyql:88_TTS-Q-249lvG-aq4_mlOMVz6oFv01@suleiman.db.elephantsql.com/zhrtmyql"
+# DATABASE_URL="postgres://zhrtmyql:88_TTS-Q-249lvG-aq4_mlOMVz6oFv01@suleiman.db.elephantsql.com/zhrtmyql"
+DATABASE_URL="postgres://yowani:XZZOtyCzLdNDlrdUkAjuLpkoxlcE2jNf@dpg-cl17ujgp2gis73ddvp20-a.oregon-postgres.render.com/taskflowdb"
